Fix spacing and width on header and nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ header {
 
 .logo-img {
   margin-left: 1em;
-  width: 25%;
+  width: 10em;
 }
 
 .mobilemenu {
@@ -98,8 +98,9 @@ header h3 {
 nav {
   display: inline-block;
   position: absolute;
+  width: 12em;
   top: 100%;
-  right: -100%;
+  right: -12em;
   box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.25);
   z-index: 5;
   transition: all 0.28s cubic-bezier(0, 0, 0.58, 1);
